--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ python-dotenv
 pandas 
 numpy
 certifi
-pymongo[srv]==3.6
+pymongo[srv]
 pymongo
 scikit-learn
 dill
 pyaml
-
-
+mlflow
+dagshub
 ##-e .
